# TraceApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Licence.txt  README.md  premake5.lua  vcpkg.json
3rd/: CMakeLists.txt
Source/: ClientOverseer.cpp  Trace.sln  TraceClient.vcxproj  TraceClient.vcxproj.filters  TraceServer.rc  TraceServer.vcxproj  TraceServer.vcxproj.filters  main.cpp
Source/3rd/include/paho-mqtt/: VersionInfo.h
Source/3rd/include/vjson/: json.cpp  json.h
Source/3rd/lib/vc_x64_lib/mswu/: build.cfg
Source/3rd/lib/vc_x64_lib/mswu/wx/: setup.h
Source/Client/: TraceClient.cpp  TraceClient.h
Source/Listeners/: LocalPipeListener.cpp  LocalPipeListener.h  MQTTListener.cpp  UDPMulticastListener.h
Source/Messages/: Message.cpp  MessagePump.cpp
Source/UI/: SettingsDialog.h  mainwindow.cpp
Source/Utilities/: Dequeue.h  StackWalker.h
cmake/: TraceConfig.cmake.in  cpm.cmake
include/Trace/: Backend.h  Message.h  Trace.h
ports/trace/: portfile.cmake  vcpkg.json
src/App/: CMakeLists.txt  ClientOverseer.cpp  ClientOverseer.h  Resource.h  Theme.h  Tray.cpp  Tray.h  main.cpp  resource.rc  stdafx.cpp  stdafx.h
src/App/Listeners/: MessagePump.cpp  MessagePump.h  UDPMulticastListener.cpp
src/App/UI/: FilterOptions.cpp  FilterOptions.h  FormatedRenderer.cpp  FormatedRenderer.h  ListView.cpp  ListView.h  MainWindow.cpp  MainWindow.h  MyAuiTabArt.cpp  MyAuiTabArt.h  TabModel.cpp  TabModel.h  UiMessage.h  wxNotebookEx.cpp  wxNotebookEx.h
src/App/Utilities/: Dequeue.h  StackWalker.cpp
src/Client/: TraceClient.cpp  TraceClient.h
src/Server/: main.cpp  stdafx.h
src/Server/Listeners/: MQTTListener.h  UDPMulticastListener.cpp
src/Server/UI/: FilterOptions.h  TabModel.h  mainwindow.h
src/Trace/: Config.h  Trace.cpp
src/Trace/Backend/: Backend_MQTT.cpp  Backend_MQTT.h  Backend_Pipe.cpp  Backend_Pipe.h  Backend_Pipe_win.cpp
src/TraceClient/: CMakeLists.txt  TraceClient.cpp  TraceClient.h  TraceClient_win.cpp
src/TraceCommon/: CmakeLists.txt  Common.h  Config.h
src/TraceServer/: CMakeLists.txt  ClientOverseer.cpp  ClientOverseer.h  Resource.h  TraceServer.rc  Tray.cpp  Tray.h  main.cpp  stdafx.h  targetver.h
src/TraceServer/Listeners/: LocalPipeListener.cpp  MQTTListener.cpp  MQTTListener.h  UDPMulticastListener.cpp
src/TraceServer/Messages/: Message.cpp  Message.h  MessagePump.cpp  MessagePump.h
src/TraceServer/UI/: FilterOptions.cpp  FilterOptions.h  FormatedRenderer.cpp  FormatedRenderer.h  SettingsDialog.cpp  SettingsDialog.h  TabModel.cpp  TabModel.h  mainwindow.cpp  mainwindow.h  wxNotebookEx.cpp  wxNotebookEx.h
src/TraceServer/Utilities/: Dequeue.h  StackWalker.cpp  assert.h
versions/t-/: trace.json
